objects/TBOM_Help_Ticket__c.object
<CustomObject>
    <description>Custom object to capture internal user help tickets for nCino/Salesforce.</description>
    <fields>
        <fullName>Administrator_Notes__c</fullName>
        <description>Field for the administrator to make needed notes regarding the ticket.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Administrator Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brief_Description_of_Request__c</fullName>
        <description>Field for user to give a brief description of the request.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Briefly describe your request.</inlineHelpText>
        <label>Brief Description of Request</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTO_Team_Member__c</fullName>
        <description>Field to capture the name of the DTO Team that has taken ownership for resolving this help request.</description>
        <label>DTO Team Member</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Denise</fullName>
                </value>
                <value>
                    <fullName>Rebecca</fullName>
                </value>
                <value>
                    <fullName>Ryan</fullName>
                </value>
                <value>
                    <fullName>Chris</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_change_will_be_deployed__c</fullName>
        <description>Field for administrator to indicate the date change will be deployed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date change will be deployed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Defect_Number__c</fullName>
        <description>Defect Number created in nCino Dev org for pForce</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Defect Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Field looks up to the user department</description>
        <formula>CreatedBy.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_of_Request__c</fullName>
        <description>Field for users to provide specific details about their help ticket request.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please provide any details that might be of assistance in diagnosing the problem.   Screen shots, details, etc.</inlineHelpText>
        <label>Description of Request</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Help_Ticket_Name__c</fullName>
        <displayFormat>Help-{00000}</displayFormat>
        <label>Help Ticket Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Primary_Object__c</fullName>
        <description>Field for the user to select the object related to this request.</description>
        <inlineHelpText>What is the primary object related to this request?</inlineHelpText>
        <label>Primary Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Collateral</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Dashboard</fullName>
                </value>
                <value>
                    <fullName>DocMan Placeholders/Smart Checklist</fullName>
                </value>
                <value>
                    <fullName>Lead/Referral</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Product Package</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Field used for users to track the priority of the request.</description>
        <inlineHelpText>What is the priority of this request?  
TBOM Help Tickets Priority Requirements:

Critical - Direct Customer Facing Issue. User is unable to move forward. (Resolution ETA - Same Day)
High - Issue is customer related, however user is able to move forward and it does not need immediate resolution. (Resolution ETA within 24 hours)
Medium  - Workaround is available, resolution still needed but is not urgent. (Resolution ETA 48-72 hours)
Low - Issue has low impact and can be addressed when time permits.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reassigned_to_PWC_or_nCino__c</fullName>
        <description>Field to capture if the help ticket will be re-assigned to a PWC or nCino support technician for further support.</description>
        <label>Reassigned to PWC or nCino</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PWC</fullName>
                </value>
                <value>
                    <fullName>nCino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reassigned_to_TBOM_Resource__c</fullName>
        <description>Field to capture if help ticket is assigned to another resources within the TBOM team.</description>
        <label>Reassigned to TBOM Resource</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data Team</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Learning and Development</fullName>
                </value>
                <value>
                    <fullName>Subject Matter Expert (SME)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Record_URL__c</fullName>
        <description>Field to capture the specific URL of the loan in question.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please copy and past the URL of the Account, Contact, Lead, Opportunity, Loan, Product Package or any other record in question.</inlineHelpText>
        <label>Related Record URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <description>Field to capture the first and last name of user requesting help.</description>
        <formula>Owner:User.FirstName&amp; &quot; &quot; &amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested By:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <description>Formula Field to Capture Date help ticket created.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resolution_Type__c</fullName>
        <label>Resolution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Closed - No Action Taken</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Field for SF/nCino team to update status of request</description>
        <inlineHelpText>Current status of this request</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>Pending User Feedback</fullName>
                </value>
                <value>
                    <fullName>Re-Assigned to PWC/nCino</fullName>
                </value>
                <value>
                    <fullName>Re-Assigned to TBOM Resource</fullName>
                </value>
                <value>
                    <fullName>User Testing</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Ready for Deployment</fullName>
                </value>
                <value>
                    <fullName>Resolved/Closed</fullName>
                </value>
                <value>
                    <fullName>Request Cancelled by User</fullName>
                </value>
                <value>
                    <fullName>Enhancement Request Rejected</fullName>
                </value>
                <value>
                    <fullName>Duplicate Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Request__c</fullName>
        <description>Field to capture the type of request user is requesting.</description>
        <inlineHelpText>What type of request is this?</inlineHelpText>
        <label>Type of Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>System Error</fullName>
                </value>
                <value>
                    <fullName>General Questions</fullName>
                </value>
                <value>
                    <fullName>Custom Report Request</fullName>
                </value>
                <value>
                    <fullName>Enhancement Request</fullName>
                </value>
                <value>
                    <fullName>New User Request</fullName>
                    <label>New User Set Up Request</label>
                </value>
                <value>
                    <fullName>User Detail Change Request</fullName>
                </value>
                <value>
                    <fullName>Customer Does Not Have Email Address</fullName>
                </value>
                <value>
                    <fullName>UAT Testing Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Profile__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <label>User Profile</label>
        <type>Text</type>
    </fields>
    <label>TBOM Help Ticket</label>
    <listViews>
        <fullName>ALL_Help_Desk_Tickets</fullName>
        <columns>Type_of_Request__c</columns>
        <columns>DTO_Team_Member__c</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Brief_Description_of_Request__c</columns>
        <columns>Status__c</columns>
        <columns>Defect_Number__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>ALL Help Desk Tickets</label>
    </listViews>
    <listViews>
        <fullName>All_OPEN_Treasury_Tickets</fullName>
        <columns>Type_of_Request__c</columns>
        <columns>DTO_Team_Member__c</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Brief_Description_of_Request__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved/Closed,Request Cancelled by User,Duplicate Request</value>
        </filters>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Treasury Solutions</value>
        </filters>
        <label>All OPEN Treasury Tickets</label>
        <sharedTo>
            <group>Core_Bank_Treasury_Support</group>
            <group>DTO_TBOM_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DTO_TBOM_Admin_Open_Help_Tickets</fullName>
        <columns>Type_of_Request__c</columns>
        <columns>DTO_Team_Member__c</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Brief_Description_of_Request__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved/Closed,Request Cancelled by User,Duplicate Request</value>
        </filters>
        <filters>
            <field>Type_of_Request__c</field>
            <operation>notEqual</operation>
            <value>Enhancement Request</value>
        </filters>
        <label>DTO - TBOM Admin ALL OPEN Help Tickets</label>
        <sharedTo>
            <group>DTO_TBOM_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TBOM_Admin_ALL_OPEN_Enhancement_Tickets</fullName>
        <columns>Type_of_Request__c</columns>
        <columns>DTO_Team_Member__c</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Brief_Description_of_Request__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved/Closed,Request Cancelled by User,Duplicate Request</value>
        </filters>
        <filters>
            <field>Type_of_Request__c</field>
            <operation>equals</operation>
            <value>Enhancement Request</value>
        </filters>
        <label>TBOM Admin ALL OPEN Enhancement Tickets</label>
    </listViews>
    <listViews>
        <fullName>TBOM_Admin_OPEN_ENHANCEMENT_REQ</fullName>
        <columns>Type_of_Request__c</columns>
        <columns>DTO_Team_Member__c</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Brief_Description_of_Request__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved/Closed,Request Cancelled by User,Duplicate Request</value>
        </filters>
        <filters>
            <field>Type_of_Request__c</field>
            <operation>equals</operation>
            <value>Enhancement Request</value>
        </filters>
        <label>TBOM Admin OPEN ENHANCEMENT REQ</label>
    </listViews>
    <listViews>
        <fullName>TBOM_Admin_Open_System_Errors</fullName>
        <columns>Type_of_Request__c</columns>
        <columns>DTO_Team_Member__c</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Brief_Description_of_Request__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved/Closed,Request Cancelled by User,Duplicate Request</value>
        </filters>
        <filters>
            <field>Type_of_Request__c</field>
            <operation>notEqual</operation>
            <value>Enhancement Request</value>
        </filters>
        <label>TBOM Admin OPEN SYSTEM ERRORS</label>
    </listViews>
    <listViews>
        <fullName>TBOM_Open_Critical_and_High_Tickets</fullName>
        <columns>DTO_Team_Member__c</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Type_of_Request__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Object__c</columns>
        <columns>Brief_Description_of_Request__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved/Closed,Request Cancelled by User,Enhancement Request Rejected</value>
        </filters>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
            <value>Critical,High</value>
        </filters>
        <label>TBOM Open Critical and High Tickets</label>
    </listViews>
    <nameField>
        <displayFormat>TBOM Help-{00000}</displayFormat>
        <label>TBOM Help Ticket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TBOM Help Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>